--- a/main.html
+++ b/main.html
@@ -1,3 +1,4 @@
+<DOCTYPE html>
 <div class = "box img-responsive">
   <div class= "first">
   </div>
@@ -32,3 +33,4 @@
   <div class = "sixteenth">
   </div>
   </div>
+</html>
